# moondream

./: EyerisAI.py  LICENSE  README.md  config.ini  pyproject.toml  requirements.txt
captures/: burst_20260131_030232_report.json
captures/alert/: surveillance_20260131_032027_report.json  surveillance_20260131_090757_report.json
captures/safe/: surveillance_20260131_032352_report.json
