[project]
name = "eyerisai"
version = "0.1.0"
description = "An AI powered camera and event detection system"
authors = ["Robert McDermott <robert.c.mcdermott@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
]
